--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URI=mongodb+srv://intellixelreach_db_user:<db_password>@cluster0.ikahtdw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+# MONGODB_URI=mongodb+srv://intellixelreach_db_user:<db_password>@cluster0.ikahtdw.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 # MONGODB_URI="mongodb://localhost:27017/intellixel"
 
 # NEXT_PUBLIC_BASE_URL="http://localhost:3000"
